MDEV-494, part #1: phantom row for big full-scan selects - Full table scan internally uses LIMIT n, and re-starts the scan from   the last seen rowkey value.  rowkey ranges are inclusive, so we will   see the same rowkey again. We should ignore it.